[package]
name = "voadora"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
inventory = "0.3.15"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
typetag = "0.2.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing-subscriber = "0.3.18"
